tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/9cc3198933cb09006cb5dbb960f49f95/9cc3198933cb09006cb5dbb960f49f95.eprime.essence:4:16:
unexpected undefined
expecting ), comma, or rest of range
            int(0..undefined(division by zero: 2 / 0 : `int`))
                   ^